--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "nf start",
+    "start": "node server.js",
     "worker": "node worker.js"
   },
   "author": "thomaslarsson",
@@ -13,8 +13,10 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "foreman": "^3.0.1",
     "snoostorm": "^1.5.2",
     "snoowrap": "^1.23.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
